--- a/CodeWars.Test/CodeWars.Test.csproj
+++ b/CodeWars.Test/CodeWars.Test.csproj
@@ -44,6 +44,7 @@
     <ItemGroup>
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tests\24.03.2022\CountingDuplicatesTest.cs" />
+        <Compile Include="Tests\25.03.2022\SumOfOddNumbersTest.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\CodeWars\CodeWars.csproj">
@@ -52,7 +53,8 @@
       </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Tests\24.03.2022\CountingDuplicatesTest" />
+      <Content Include="Tests\24.03.2022\CountingDuplicatesTest.txt" />
+      <Content Include="Tests\25.03.2022\SumOfOddNumbersTest.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
