--- a/CodeWars.Test/CodeWars.Test.csproj
+++ b/CodeWars.Test/CodeWars.Test.csproj
@@ -45,6 +45,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="Tests\24.03.2022\CountingDuplicatesTest.cs" />
         <Compile Include="Tests\25.03.2022\SumOfOddNumbersTest.cs" />
+        <Compile Include="Tests\26.03.2022\StopGninnipsMySdrowTest.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\CodeWars\CodeWars.csproj">
@@ -55,6 +56,7 @@
     <ItemGroup>
       <Content Include="Tests\24.03.2022\CountingDuplicatesTest.txt" />
       <Content Include="Tests\25.03.2022\SumOfOddNumbersTest.txt" />
+      <Content Include="Tests\26.03.2022\StopGninnipsMySdrowTest.txt" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
