--- a/CodeWars/CodeWars.csproj
+++ b/CodeWars/CodeWars.csproj
@@ -41,6 +41,7 @@
     <ItemGroup>
         <Compile Include="Katas\24.03.2022\CountingDuplicates.cs" />
         <Compile Include="Katas\25.03.2022\SumOfOddNumbers.cs" />
+        <Compile Include="Katas\26.03.2022\StopGninnipsMySdrow.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
